# python-template

./: .pre-commit-config.yaml  Pipfile  README.md  setup.cfg  skeleton.py
template/: Pipfile  README.md  setup.cfg  setup.py
