[metadata]
name = $project_name
version = 0.0.0
author = $author
author_email = <email>
summary = <summary>
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = $python_version
packages = find:
install_requires =

zip_safe = False

[options.packages.find]
include=$project_name*
